Implementati gli ultimi comandi